--- a/Front_App/css/style.css
+++ b/Front_App/css/style.css
@@ -1,22 +1,44 @@
 body{
-   line-height: 2;
-}
-.navbar{
-    background-color:#52725b;
-    padding-bottom: 2px;
 
-    font-weight: 600;
-    
-}
-
-li{
-    margin-left:20px;
-}
-
-ul{
-    margin-left: 50%;
-}
-
-.carousel-item{
-    height: 
-}
+    line-height: 2;
+ }
+ .navbar{
+     background-color:#52725b98;
+     padding-bottom: 2px;
+     font-weight: 600;
+     
+ }
+ 
+ li{
+     margin-left:20px;
+     
+ }
+ a{
+     color: antiquewhite !important;
+ }
+ 
+ ul{
+     margin-left: 50%;
+ }
+ 
+ * {
+     box-sizing: border-box;
+ }
+ 
+ header {
+     background-image:linear-gradient(rgba(0, 0, 0, 0.253), rgba(0, 0, 0, 0.137)), url(/for-the-love-of-pets_Team-Project/Front_App/css/images/anoir-chafik-2_3c4dIFYFU-unsplash.jpg);
+     background-size: cover;
+     background-position: center;
+     height: 100vh;
+     background-attachment: fixed;
+     
+  }
+ 
+  .intro-lead-in,
+  .intro-heading {
+     display:flex;
+     justify-content: center;
+     color: antiquewhite;
+     font-size: 
+ }
+ 
