--- a/Back_App/try01/src/main/webapp/resources/css/style.css
+++ b/Back_App/try01/src/main/webapp/resources/css/style.css
@@ -1,19 +1,6 @@
 body{
-   line-height: 2;
-}
-.navbar{
-    background-color:#52725b;
-    padding-bottom: 2px;
-
-    font-weight: 600;
-    
+   background-color: tomato;
 }
 
-li{
-    margin-left:20px;
-}
 
-ul{
-    margin-left: 50%;
-}
 
