--- a/PawSociety/css/style_reg.css
+++ b/PawSociety/css/style_reg.css
@@ -87,15 +87,15 @@ img::-moz-selection {
 }
 
 .btn-primary {
-    background-color: #4E734E;
-    border-color: #4E734E;
-}
-
-.btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-    background-color: #95BF95 !important;
-    border-color: #95BF95 !important;
+    background-color: #BF5C8E;
+    border-color: #BF5C8E;
+  }
+  
+  .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
+    background-color: rgba(191, 92, 142, 0.932) !important;
+    border-color: rgba(191, 92, 142, 0.863) !important;
     color: white;
-}
+  }
 
 .btn-primary:active, .btn-primary:focus {
     box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
@@ -183,11 +183,11 @@ section#contact {
 }
 
 .maindiv{
-    padding:0 20% 0 20%;
+    padding:0 30% 0 30%;
 }
 
 section#contact .section-heading {
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
 
 section#contact .form-group {
@@ -200,6 +200,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 
 section#contact .form-group input.form-control {
     height: 50px;
+    background-color: #f8fbf8b0;
 }
 
 section#contact .form-group textarea.form-control {
@@ -213,25 +214,25 @@ section#contact .form-control:focus {
 
 section#contact ::-webkit-input-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60be;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact :-moz-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60be;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact ::-moz-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60be;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact :-ms-input-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60be;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -296,3 +297,6 @@ ul.social-buttons li a {
     width: auto;
    
   }
+
+
+  /* background-size */
