--- a/Back_App/try01/src/main/webapp/resources/css/style_adopt.css
+++ b/Back_App/try01/src/main/webapp/resources/css/style_adopt.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+html {
+   scroll-behavior: smooth;
+ }
+
 p {
     line-height: 1.75;
 }
@@ -87,14 +91,14 @@ img::-moz-selection {
 }
 
 .btn-primary {
-    background-color: #4E734E;
-    border-color: #4E734E;
+     background-color: rgb(191, 92, 142)!important;
+  border-color: rgb(191, 92, 142) !important;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-    background-color: #95BF95 !important;
-    border-color: #95BF95 !important;
-    color: white;
+   background-color: rgba(191, 92, 142, 0.932) !important;
+  border-color: rgba(191, 92, 142, 0.863) !important;
+  color: white;
 }
 
 .btn-primary:active, .btn-primary:focus {
@@ -169,7 +173,7 @@ header.masthead {
     text-align: center;
     color: white;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.349),rgba(0, 0, 0, 0.377)) , url("/PawSociety/img/adoption/doginbed.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.349),rgba(0, 0, 0, 0.377)) , url("../images/adoption/doginbed.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -295,4 +299,17 @@ ul.social-buttons li a {
     height: 45px;
     width: auto;
    
+  }
+  
+  .adopt-context{
+      margin: 50px;
+  }
+  
+  #find-dog{
+      background-color: rgba(179, 216, 179, 0.377);
+  }
+
+  .card-img-top{
+    max-height:250px;
+    height: 250px;
   }
