--- a/Back_App/try01/src/main/webapp/resources/css/style_reg.css
+++ b/Back_App/try01/src/main/webapp/resources/css/style_reg.css
@@ -175,7 +175,7 @@ section#contact h3 {
 
 section#contact {
     background-color: #734E60;
-    background-image: linear-gradient(rgba(8, 8, 8, 0.212), rgba(0, 0, 0, 0.609)), url("/PawSociety/img/registration/jamie-street-UtrE5DcgEyg-unsplash.jpg");
+    background-image: linear-gradient(rgba(8, 8, 8, 0.212), rgba(0, 0, 0, 0.609)), url("../images/registration/jamie-street-UtrE5DcgEyg-unsplash.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -295,4 +295,8 @@ ul.social-buttons li a {
     height: 45px;
     width: auto;
    
+  }
+  
+  .form-control{
+      background-color: #f8fbf8c2;
   }
