--- a/Back_App/try01/src/main/webapp/resources/css/style_reg.css
+++ b/Back_App/try01/src/main/webapp/resources/css/style_reg.css
@@ -77,28 +77,28 @@ img::-moz-selection {
 }
 
 .btn {
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    font-weight: 700;
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 700;
 }
 
 .btn-xl {
-    font-size: 18px;
-    padding: 20px 40px;
+  font-size: 18px !important;
+  padding: 20px 40px !important;
 }
 
 .btn-primary {
-    background-color: #4E734E;
-    border-color: #4E734E;
+  background-color: rgb(191, 92, 142)!important;
+  border-color: rgb(191, 92, 142) !important;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-    background-color: #95BF95 !important;
-    border-color: #95BF95 !important;
-    color: white;
+  background-color: rgba(191, 92, 142, 0.932) !important;
+  border-color: rgba(191, 92, 142, 0.863) !important;
+  color: white;
 }
 
 .btn-primary:active, .btn-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
 }
 
 #mainNav {
@@ -180,6 +180,7 @@ section#contact {
     background-attachment: scroll;
     background-position: center center;
     background-size: cover;
+    height: 100vh;
 }
 
 .maindiv{
@@ -196,6 +197,8 @@ section#contact .form-group {
 
 section#contact .form-group input, section#contact .form-group textarea {
     padding: 20px;
+    background-color: #f8fbf8b0;
+    color:#BF5C8E;
 }
 
 section#contact .form-group input.form-control {
@@ -213,25 +216,25 @@ section#contact .form-control:focus {
 
 section#contact ::-webkit-input-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60d2;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact :-moz-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60d2;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact ::-moz-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60d2;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 section#contact :-ms-input-placeholder {
     font-weight: 700;
-    color: #ced4da;
+    color: #734e60d2;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -295,8 +298,6 @@ ul.social-buttons li a {
     height: 45px;
     width: auto;
    
-  }
+}
   
-  .form-control{
-      background-color: #f8fbf8c2;
-  }
+  
